Checks rows as it should, generates 3 plates

--- a/Bango/index.html
+++ b/Bango/index.html
@@ -10,7 +10,7 @@
     <title>Banko</title>
 </head>
 <body onload="threeTimes()">
-    <button id="create" onclick="generateNumbers(2)"> Create </button>
+    <button id="create" onclick="threeTimes2(2)"> Create </button>
     <div id="bigcontainer">
         <div id="container_1">
 
