--- a/Bango/index.html
+++ b/Bango/index.html
@@ -10,7 +10,8 @@
     <title>Banko</title>
 </head>
 <body onload="threeTimes()">
-    <button id="create" onclick="threeTimes2(2)"> Create </button>
+    <input type="text" id="inputline">
+    <button id="create" onclick="threeTimes2()"> Create </button>
     <div id="bigcontainer">
         <div id="container_1">
 
