--- a/Bango/index.html
+++ b/Bango/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script>
     <script src="script.js" defer></script>
-    <script src="/Forside/script.js"> </script>
     <link rel="stylesheet" href="/Forside/style.css">
+    <script src="/Forside/script.js" defer></script>
     <title>Banko</title>
 </head>
 <body onload="threeTimes()">
