--- a/Forside/index.html
+++ b/Forside/index.html
@@ -32,5 +32,10 @@
           </nav>
         </header> 
     </div>
+    <div id="body">
+      <h1>Eksamens projekt: GF2</h1>
+      <img src="/Forside/Images/IMG_1293 Large.jpeg" id="pic">
+      <p id="navn">Lavet af Mikkel, Kevin, og Gabriel</p>
+    </div>
 </body>
 </html>
